[package]
name = "adventOfCode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.10.2", features = [] }

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

